errors + env file

--- a/frontend/front-end/styles/search.module.css
+++ b/frontend/front-end/styles/search.module.css
@@ -78,3 +78,10 @@
 .a:hover {
     color: red;
 }
+
+.error {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+}
