--- a/frontend/front-end/styles/addUser.module.css
+++ b/frontend/front-end/styles/addUser.module.css
@@ -31,7 +31,7 @@
 }
 
 .row:nth-child(1) {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .label {
@@ -49,7 +49,7 @@
 
 .button {
     padding: 5px 7px 5px 7px;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 35px;
     border: 1px solid black;
     border-radius: 5px;
@@ -62,4 +62,11 @@
 .button:hover {
     cursor: pointer;
     background-color: #e3d5ca;
+}
+
+.error {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
