--- a/frontend/front-end/styles/updateUser.module.css
+++ b/frontend/front-end/styles/updateUser.module.css
@@ -31,7 +31,7 @@
 }
 
 .row:nth-child(1) {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .label {
@@ -69,6 +69,13 @@
     width: 80%;
     display: flex;
     flex-direction: row;
-    margin-top: 20px;
+    margin-top: 7px;
     justify-content: space-between;
+}
+
+.error {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
