--- a/frontend/front-end/styles/globals.css
+++ b/frontend/front-end/styles/globals.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-color: #e3d5ca;
+  background-image: url('../public/background.avif');
+  background-size: cover;
   font-family: Neucha, sans-serif;
   letter-spacing: 1px;
 }
