--- a/frontend/front-end/styles/login.module.css
+++ b/frontend/front-end/styles/login.module.css
@@ -1,14 +1,14 @@
 .form {
     width: 30%; 
     margin: auto;
-    margin-top: 30px;
+    margin-top: 120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 1px solid black;
     border-radius: 10px;
-    background-color: #d5bdaf;
+    background-color: #ddb892;
 }
 
 .row {
