--- a/frontend/front-end/styles/register.module.css
+++ b/frontend/front-end/styles/register.module.css
@@ -1,25 +1,14 @@
-.h1 {
-    font-size: 30px;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.hr {
-    border: 3px solid #edede9;
-}
-
 .form {
     width: 30%; 
     margin: auto;
-    margin-top: 30px;
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 1px solid black;
     border-radius: 10px;
-    background-color: #d5bdaf;
+    background-color: #ddb892;
 }
 
 .row {
