--- a/frontend/front-end/styles/user/confirmation.module.css
+++ b/frontend/front-end/styles/user/confirmation.module.css
@@ -22,7 +22,7 @@
     border: 3px solid black;
     padding: 10px 15px 10px 15px;
     text-align: center;
-    background-color: #d5bdaf;
+    background-color: #ddb892;
 }
 
 
@@ -49,7 +49,7 @@
 
 .button:hover {
     cursor: pointer;
-    background-color: #d5bdaf;
+    background-color: #ddb892
 }
 
 .buttons {
