--- a/frontend/front-end/styles/user/search.module.css
+++ b/frontend/front-end/styles/user/search.module.css
@@ -42,7 +42,7 @@
 
 .button:hover {
     cursor: pointer;
-    background-color: #d5bdaf;
+    background-color: #ddb892
 }
 
 .table {
@@ -58,7 +58,7 @@
     border: 3px solid black;
     padding: 10px 15px 10px 15px;
     text-align: center;
-    background-color: #d5bdaf;
+    background-color: #ddb892;
 }
 
 
