--- a/frontend/front-end/styles/post/edit.module.css
+++ b/frontend/front-end/styles/post/edit.module.css
@@ -10,7 +10,15 @@
     background-color: #ddb892;
 }
 
-.row {
+.row1 {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.row2 {
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -35,26 +43,17 @@
     letter-spacing: 1px;
 }
 
-.button {
-    padding: 5px 7px 5px 7px;
-    margin-top: 5px;
-    margin-bottom: 35px;
-    border: 1px solid black;
+.textarea {
     border-radius: 5px;
-    font-size: 15px;
-    font-family: Neucha, sans-serif;
+    border: 1px solid black;
+    padding: 8px;
+    font-family: 'Neucha';
     letter-spacing: 1px;
-    transition: 0.1s;
-}
-
-.button:hover {
-    cursor: pointer;
-    background-color: #e3d5ca;
 }
 
 .error {
     color: red;
-    font-size: 21px;
+    font-size: 20px;
     text-align: center;
     margin-top: 40px;
     font-weight: bold;
@@ -70,6 +69,30 @@
     border: 1px solid black;
     border-radius: 5px;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 50px;
     margin-bottom: 30px;
+}
+
+.buttons {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button {
+    width: 48%;
+    padding: 5px 7px 5px 7px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 15px;
+    font-family: Neucha, sans-serif;
+    letter-spacing: 1px;
+    transition: 0.1s;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: #e3d5ca;
 }
