--- a/frontend/front-end/styles/register.module.css
+++ b/frontend/front-end/styles/register.module.css
@@ -1,7 +1,6 @@
 .form {
     width: 30%; 
     margin: auto;
-    margin-top: 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .row:nth-child(1) {
@@ -24,8 +23,8 @@
 }
 
 .label {
-    font-size: 18px;
-    margin-bottom: 6px;
+    font-size: 17px;
+    margin-bottom: 5px;
 }
 
 .input {
@@ -57,5 +56,20 @@
     color: red;
     font-size: 20px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 40px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+.header {
+    text-align: center;
+    font-size: 20px;
+    background-color: #ddb892;
+    width: 30%;
+    padding: 10px 5px 10px 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
