--- a/frontend/front-end/styles/user/confirmation.module.css
+++ b/frontend/front-end/styles/user/confirmation.module.css
@@ -1,25 +1,15 @@
-.h1 {
-    font-size: 30px;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.hr {
-    border: 3px solid #edede9;
-}
-
 .table {
     width: 60%;
     height: auto;
     margin: auto;
     margin-top: 50px;
     border-collapse: collapse;
+    margin-bottom: 50px;
 }
 
 .th {
-    font-size: 20px;
-    border: 3px solid black;
+    font-size: 19px;
+    border: 1px solid black;
     padding: 10px 15px 10px 15px;
     text-align: center;
     background-color: #ddb892;
@@ -27,8 +17,8 @@
 
 
 .td {
-    font-size: 18px;
-    border: 3px solid black;
+    font-size: 17px;
+    border: 1px solid black;
     padding: 10px 15px 10px 15px;
     text-align: center;
     background-color: white;
@@ -39,6 +29,7 @@
     margin-top: 10px;
     margin-bottom: 35px;
     border: 1px solid black;
+    background-color: #ddb892;
     border-radius: 5px;
     font-size: 15px;
     font-family: Neucha, sans-serif;
@@ -49,7 +40,7 @@
 
 .button:hover {
     cursor: pointer;
-    background-color: #ddb892
+    background-color: #f3d5b5;
 }
 
 .buttons {
@@ -62,7 +53,13 @@
 
 .p {
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 20px;
+    font-size: 18px;
+    background-color: #ddb892;
+    width: 60%;
+    padding: 10px 5px 10px 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 70px;
+    margin-bottom: 60px;
 }
