--- a/frontend/front-end/styles/createRecipe.module.css
+++ b/frontend/front-end/styles/createRecipe.module.css
@@ -158,6 +158,8 @@
     padding: 5px 7px 5px 7px;
     border: 1px solid black;
     border-radius: 3px;
+    font-family: "Neucha";
+    letter-spacing: 1px;
 }
 
 .addIngredient {
