--- a/frontend/front-end/styles/post/postTable.module.css
+++ b/frontend/front-end/styles/post/postTable.module.css
@@ -5,6 +5,7 @@
     margin-bottom: 50px;
     background-color: #ddb892;
     border-collapse: collapse;
+    margin-top: 50px;
 }
 
 .table:nth-child(1) {
@@ -86,4 +87,13 @@
 .button:hover {
     cursor: pointer;
     background-color: #f3d5b5;
+}
+
+.error {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 50px;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
