--- a/frontend/front-end/styles/user/edit.module.css
+++ b/frontend/front-end/styles/user/edit.module.css
@@ -62,14 +62,14 @@
 
 .button:hover {
     cursor: pointer;
-    background-color: #ddb892
+    background-color: #f3d5b5;
 }
 
 .buttons {
     width: 80%;
     display: flex;
     flex-direction: row;
-    margin-top: 7px;
+    margin-top: 20px;
     justify-content: space-between;
 }
 
@@ -78,4 +78,20 @@
     font-size: 20px;
     text-align: center;
     margin-top: 20px;
+}
+
+.header2 {
+    text-align: center;
+    font-size: 20px;
+    background-color: #ddb892;
+    width: 30%;
+    padding: 10px 5px 10px 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.password {
+    font-size: 12px;
 }
