--- a/frontend/front-end/styles/user/search.module.css
+++ b/frontend/front-end/styles/user/search.module.css
@@ -76,6 +76,11 @@
     background-color: white;
 }
 
+.td:nth-of-type(4):hover {
+    background-color: #f3d5b5;;
+    cursor: pointer;
+}
+
 .td:nth-of-type(5):hover {
     background-color: #f3d5b5;;
     cursor: pointer;
