--- a/frontend/front-end/styles/user/searchPosts.module.css
+++ b/frontend/front-end/styles/user/searchPosts.module.css
@@ -69,3 +69,12 @@
     cursor: pointer;
     background-color: #f3d5b5;
 }
+
+.error {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 50px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
