--- a/frontend/front-end/styles/createRecipe.module.css
+++ b/frontend/front-end/styles/createRecipe.module.css
@@ -144,6 +144,32 @@
     width: 100%;
 }
 
+.ingredient2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.ingredientInput1 {
+    width: 60%;
+    padding: 5px 7px 5px 7px;
+    border: 1px solid black;
+    border-radius: 3px;
+    font-family: "Neucha";
+    letter-spacing: 1px;
+}
+
+.ingredientInput2 {
+    width: 35%;
+    padding: 5px 7px 5px 7px;
+    border: 1px solid black;
+    border-radius: 3px;
+    font-family: "Neucha";
+    letter-spacing: 1px;
+}
+
 .ingredient:nth-of-type(1) {
     margin-bottom: 15px;
 }
