--- a/frontend/front-end/styles/createRecipe.module.css
+++ b/frontend/front-end/styles/createRecipe.module.css
@@ -28,6 +28,15 @@
     align-items: center;
 }
 
+.error {
+    color: red;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
 .field2 {
     width: 47%;
     display: flex;
