--- a/frontend/front-end/styles/user/searchPosts.module.css
+++ b/frontend/front-end/styles/user/searchPosts.module.css
@@ -78,3 +78,35 @@
     font-weight: bold;
     letter-spacing: 2px;
 }
+
+.return {
+    position: fixed;
+    bottom: 40px;
+    left: 50px;
+    font-size: 30px;
+    font-family: 'Neucha';
+    letter-spacing: 1px;
+    padding: 10px 20px 10px 20px;
+    border: 1px solid black;
+    background-color: #ddb892;
+    transition: 0.1s;
+    border-radius: 5px;
+}
+
+.return:hover {
+    background-color: #f3d5b5;
+    cursor: pointer;
+}
+
+.header2 {
+    text-align: center;
+    font-size: 20px;
+    background-color: #ddb892;
+    width: 40%;
+    padding: 10px 5px 10px 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
