--- a/frontend/front-end/styles/post/postTable.module.css
+++ b/frontend/front-end/styles/post/postTable.module.css
@@ -97,3 +97,16 @@
     font-weight: bold;
     letter-spacing: 2px;
 }
+
+.header2 {
+    text-align: center;
+    font-size: 20px;
+    background-color: #ddb892;
+    width: 40%;
+    padding: 10px 5px 10px 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
